# hardware

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  clippy.toml  deny.toml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: changelog-check.yml  ci.yml  coverage.yml  docs-check.yml  guard-no-stubs.yml
crates/backend_akida/: Cargo.toml
crates/backend_akida/src/: lib.rs
crates/backend_custom_asic/: Cargo.toml
crates/backend_custom_asic/src/: lib.rs
crates/backend_dynaps/: Cargo.toml
crates/backend_dynaps/src/: lib.rs
crates/backend_loihi/: Cargo.toml
crates/backend_loihi/src/: lib.rs
crates/backend_memxbar/: Cargo.toml
crates/backend_memxbar/src/: lib.rs
crates/backend_neurogrid/: Cargo.toml
crates/backend_neurogrid/src/: lib.rs
crates/backend_riscv/: Cargo.toml
crates/backend_riscv/src/: lib.rs
crates/backend_riscv/tests/: pipeline_meta_bare_metal.rs  pipeline_meta_control_plane.rs  pipeline_meta_linux_user.rs
crates/backend_spinnaker/: Cargo.toml
crates/backend_spinnaker/src/: lib.rs
crates/backend_truenorth/: Cargo.toml
crates/backend_truenorth/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: e2e.rs
crates/frontend_bindsnet/: Cargo.toml
crates/frontend_bindsnet/src/: lib.rs
crates/frontend_brian/: Cargo.toml
crates/frontend_carlsim/: Cargo.toml
crates/frontend_genn/: Cargo.toml
crates/frontend_nengo/: Cargo.toml
crates/frontend_nest/: Cargo.toml
crates/frontend_pynn/: Cargo.toml
crates/frontend_rockpool/: Cargo.toml
crates/hal/: Cargo.toml
crates/hal/src/: lib.rs
crates/hal/tests/: manifest_validation.rs
crates/mlir-bridge/: Cargo.toml
crates/mlir-bridge/src/: lib.rs
crates/mlopt/: Cargo.toml
crates/mlopt/src/: lib.rs
crates/nir/: Cargo.toml
crates/nir/src/: lib.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/benches/: partition_bench.rs
crates/orchestrator/src/: lib.rs  metrics.rs
crates/passes/: Cargo.toml
crates/passes/src/: lib.rs
crates/py/: Cargo.toml
crates/py/examples/nir/: simple.json
crates/py/src/: lib.rs
crates/py/targets/: riscv64gcv_linux.toml
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/sim_arbor/: Cargo.toml
crates/sim_arbor/src/: lib.rs
crates/sim_coreneuron/: Cargo.toml
crates/sim_coreneuron/src/: lib.rs
crates/sim_hw_specific/: Cargo.toml
crates/sim_hw_specific/src/: lib.rs
crates/sim_neuron/: Cargo.toml
crates/sim_neuron/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: book.toml
docs/architecture/: overview.md
docs/backends/: authoring.md  riscv.md
docs/metrics/: labels.html  labels.md  profiling.html  profiling.md
docs/notes/: compatibility.html  compatibility.md
docs/python/: usage.md
docs/release/: riscv_release_readiness.md  riscv_task_breakdown.md
docs/spec/: backends.html  backends.md  errors.html  errors.md  hal.html  hal.md  nir.html  nir.md  passes.html  passes.md
docs/src/: SUMMARY.md  contributing.md  metrics.md  notes.md  overview.md  quickstart.md  rfc_template.md  risk_register.md  targets.md  tutorials.md
docs/src/tutorials/: sim_hw_specific.md
docs/tutorials/: backend_authoring.html  backend_authoring.md  pipeline.html  pipeline.md  riscv_pysdk_quickstart.html  riscv_pysdk_quickstart.md
examples/: README.md
examples/nir/: simple.json  simple.yaml
fixtures/nir/: chain_small.json
targets/: akida.toml  custom_asic.toml  dynaps.toml  loihi2.toml  memxbar.toml  neurogrid.toml  riscv32imac_bare.toml  riscv64gc_ctrl.toml  riscv64gcv_linux.toml  spinnaker2.toml  truenorth.toml
