[package]
name = "nc-backend-riscv"
version = "0.0.1"
edition = "2021"
license = "UNLICENSED"
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
telemetry = ["dep:nc-telemetry"]
riscv-v = []

[dependencies]
anyhow = { workspace = true }
nc-nir = { path = "../nir", package = "nc-nir" }
nc-hal = { path = "../hal", package = "nc-hal" }
nc-passes = { path = "../passes", package = "nc-passes" }
nc-telemetry = { path = "../telemetry", optional = true, package = "nc-telemetry" }
serde_json = { workspace = true }
