[package]
name = "nc-backend-truenorth"
version = "0.0.1"
edition = "2021"
license = "UNLICENSED"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
nc-nir = { path = "../nir", package = "nc-nir" }
nc-hal = { path = "../hal", package = "nc-hal" }
serde_json = { workspace = true }
