[package]
name = "nc-hal"
version = "0.0.1"
edition = "2021"
license = "UNLICENSED"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
indexmap = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
