[package]
name = "nc-orchestrator"
version = "0.0.1"
edition = "2021"
license = "UNLICENSED"
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
telemetry = ["dep:nc-telemetry"]
orchestrator_partition = []

[dependencies]
anyhow = { workspace = true }
nc-nir = { path = "../nir" }
nc-telemetry = { path = "../telemetry", optional = true, package = "nc-telemetry" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
