[package]
name = "nc-sim-hw-specific"
version = "0.0.1"
edition = "2021"
license = "UNLICENSED"
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
telemetry = ["dep:nc-telemetry"]

[dependencies]
anyhow = { workspace = true }
nc-telemetry = { path = "../telemetry", optional = true, package = "nc-telemetry" }
