[package]
name = "nc-telemetry"
version = "0.0.1"
edition = "2021"
license = "UNLICENSED"
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
# Enable OpenTelemetry OTLP exporter pipeline
otlp = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry", "dep:ctrlc"]

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ctrlc = { version = "3", optional = true }
# Optional OTLP exporter deps
opentelemetry = { version = "0.22", optional = true, default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.31", optional = true, default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "0.15", optional = true, default-features = false, features = ["http-proto", "trace"] }
tracing-opentelemetry = { version = "0.23", optional = true }
